# project_BD

./: .gitignore  README.md  config.py  database.ini.example  main.py  pyproject.toml
src/: api_hh.py  db.py  file_module.py
